--- a/SupplierRanking/Views/Comprador/CadastroPessoaFisica.cshtml
+++ b/SupplierRanking/Views/Comprador/CadastroPessoaFisica.cshtml
@@ -84,38 +84,22 @@
 
             <!--- CPF --->
             <div class="col-11 wrap-input p-0">
-                <input class="input" type="text" maxlength="11" name="cpf" placeholder="CPF" data-mask="000.000.000-00" data-mask-sectionFocus="true" />
-                <span class="focus-input"></span>
-                <span class="symbol-input">
-                    <i class="fa fa-envelope" aria-hidden="true"></i>
-                </span>
+                <input class="input" type="text" maxlength="14" name="cpf" placeholder="CPF" data-mask="000.000.000-00" data-mask-sectionFocus="true"/>
             </div>
 
             <!--- Nome --->
             <div class="col-11 wrap-input p-0">
                 <input class="input" type="text" name="nome" placeholder="Nome">
-                <span class="focus-input"></span>
-                <span class="symbol-input">
-                    <i class="fa fa-envelope" aria-hidden="true"></i>
-                </span>
             </div>
 
             <!--- Sobrenome --->
             <div class="col-11 wrap-input p-0">
                 <input class="input" type="text" name="sobrenome" placeholder="Sobrenome">
-                <span class="focus-input"></span>
-                <span class="symbol-input">
-                    <i class="fa fa-envelope" aria-hidden="true"></i>
-                </span>
             </div>
 
             <!--- Email --->
             <div class="col-11 wrap-input p-0">
                 <input class="input" type="email" name="email" placeholder="Email">
-                <span class="focus-input"></span>
-                <span class="symbol-input">
-                    <i class="fa fa-envelope" aria-hidden="true"></i>
-                </span>
             </div>
 
             <div class="col-11 row p-0 align-items-center justify-content-between">
@@ -124,19 +108,11 @@
                     <!--- Senha --->
                     <div class="wrap-input">
                         <input class="input input-senha" type="password" name="senha" placeholder="Senha">
-                        <span class="focus-input"></span>
-                        <span class="symbol-input">
-                            <i class="fa fa-envelope" aria-hidden="true"></i>
-                        </span>
                     </div>
 
                     <!--- Confirmar Senha --->
                     <div class="wrap-input">
                         <input class="input input-senha" type="password" name="confirmarSenha" placeholder="Confirmar Senha">
-                        <span class="focus-input"></span>
-                        <span class="symbol-input">
-                            <i class="fa fa-envelope" aria-hidden="true"></i>
-                        </span>
                     </div>
                 </div>
 
@@ -191,20 +167,17 @@
             <!--- Telefone --->
             <div class="col-5 wrap-input">
                 <input class="input" type="text" name="telefone" maxlength="10" placeholder="(00) 0000-0000" data-mask="(00) 0000-0000" data-mask-sectionFocus="true">
-                <span class="focus-input"></span>
-                <span class="symbol-input">
-                    <i class="fa fa-envelope" aria-hidden="true"></i>
-                </span>
             </div>
 
             <!--- Celular --->
             <div class="col-5 wrap-input pl-4 pr-0 mr-2">
                 <input class="input" type="text" name="celular" placeholder="(00) 00000-0000"  data-mask="(00) 00000-0000" data-mask-sectionFocus="true">
-                <span class="focus-input"></span>
-                <span class="symbol-input">
-                    <i class="fa fa-envelope" aria-hidden="true"></i>
-                </span>
             </div>
+        </div>
+
+        <div class="col-12 form-third-part justify-content-between text-center pl-5 pr-5">
+            Seleciona abaixo todas as categorias de fornecimento que tenha interesse: <br />
+            E não se preocupe se esquecer de alguma, pois será possível editar depois.
 
             <div class="col-4 pt-5">
                 @foreach (var c in ViewBag.ListaCategorias)
@@ -216,62 +189,48 @@
                             @(c.Categoria)
                         </label>
                     </div>
-                    <input id="inputHidden" value="@(c.Categoria)" type="text" name="inputHidden">
-                }   
-            </div>
-
-            <div class="row col-12 align-items-center mt-5 pt-5 pl-2 pr-2">
-                <!--- Voltar para Login --->
-                <div class="col-6 text-left">
-                    <a class="sub-link" href="/Login/Login">
-                        Login
-                    </a>
-                </div>
-
-                <!--- Botao Proximo --->
-                <div class="col-6 d-flex align-self-center justify-content-end pr-0">
-                    <button id="btnProximo" class="login-form-btn mt-2">
-                        Próximo
-                    </button>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-12 form-third-part justify-content-between text-center pl-5 pr-5" >
-            Seleciona abaixo todas as categorias de fornecimento que tenha interesse: <br />
-            E não se preocupe se esquecer de alguma, pois será possível editar depois. 
-            
-
-            <div class="col-4 pt-5">
-                @*------------------------------------------------------------------------*@
-                @foreach (var c in ViewBag.ListaCategorias)
-                {
-                    <div class="col-12 checkbox-container text-left mt-4 p-0">
-                            <label for="@(c.Categoria)">
-                            <input type="checkbox" id="@(c.Categoria)" name="categoria"/>
-                            <span class="checkbox"></span>
-                            @(c.Categoria)
-                        </label>
-                    </div>
-
                 }
-            </div>
-
-            <div class="row col-12 align-items-center mt-5 pt-4 pl-5 pr-5">
-                <!--- Voltar para etapa anterior --->
-                <div class="col-6 text-left">
-                    <button id="btnVoltar" class="fake-link sub-link">
-                       Voltar
-                    </button>
-                </div>
-
-                <!--- Botao Cadastrar --->
-                <div class="col-6 d-flex align-self-center justify-content-end pr-0">
-                    <button type="submit" id="btnCadastrar" class="login-form-btn mt-2">
-                        Cadastrar
-                    </button>
-                </div>
             </div>
         </div>
     </form>
+</div>
+
+<div class="row col-12 cadastro-options align-items-center pl-5 pr-5">
+
+    <span class="col-8 error-msg alert-danger d-flex justify-content-center p-2 mt-3 mb-4 hide"
+          style="margin: 0 auto;">
+        Preencha o(s) campo(s) corretamente! @ViewBag.Message
+    </span>
+
+    <div class="col-12 d-flex form-first-part p-0">
+        <!--- Voltar para Login --->
+        <div class="col-6 d-flex align-self-center text-left">
+            <a class="sub-link" href="/Login/Login">
+                Login
+            </a>
+        </div>
+
+        <!--- Botao Proximo --->
+        <div class="col-6 d-flex align-self-center justify-content-end pr-0">
+            <button id="btnProximo" class="login-form-btn disabled" disabled>
+                Próximo
+            </button>
+        </div>
+    </div>
+
+    <div class="col-12 d-flex form-third-part p-0">
+        <!--- Voltar para etapa anterior --->
+        <div class="col-6 d-flex align-self-center text-left">
+            <button id="btnVoltar" class="fake-link sub-link">
+                Voltar
+            </button>
+        </div>
+
+        <!--- Botao Cadastrar --->
+        <div class="col-6 d-flex align-self-center justify-content-end pr-0">
+            <button type="submit" id="btnCadastrar" class="login-form-btn disabled" disabled>
+                Cadastrar
+            </button>
+        </div>
+    </div>
 </div>
