--- a/SupplierRanking/Views/Shared/_LayoutCadastro.cshtml
+++ b/SupplierRanking/Views/Shared/_LayoutCadastro.cshtml
@@ -27,6 +27,7 @@
 
         <!-- INÍCIO - Script's de configuracao -->
         <script src="~/Content/vendor/jquery/jquery-3.2.1.min.js"></script>
+        <script src="~/Scripts/jquery.mask.js"></script>
 
         <script src="~/Content/vendor/bootstrap/js/popper.js"></script>
         <script src="~/Content/vendor/bootstrap/js/popper.min.js"></script>
