--- a/SupplierRanking/Content/css/cover_overlay.css
+++ b/SupplierRanking/Content/css/cover_overlay.css
@@ -10,7 +10,7 @@
     left: 0;
     right: 0;
     content: '';
-    background: #0962ea;
+    background: #0C496BE6;
     opacity: .5; }
   .cover_1 .heading {
     color: #fff;
