--- a/SupplierRanking/Views/Home/Index.cshtml
+++ b/SupplierRanking/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 <!-- INÍCIO - Carossel -->
 <section class="home-slider owl-carousel">
     <div class="slider-item" 
-         style="background-image: url('/Content/images/bg_1.jpg');">
+         style="background-image: url('../../Content/images/Slide1.jpg');">
         <div class="overlay"></div>
         <div class="container">
             <div class="row slider-text align-items-center">
@@ -13,19 +13,19 @@
                         Nós somos <strong><a href="#">SupplierRanking</a></strong>
                         , Fornecimento de materiais com mais qualidade
                     </p>
-                    <h1 class="mb-3">Trazendo ótimos negócios para você!!</h1>
+                    <h1 class="mb-3">Seja Bem vindo!</h1>
                 </div>
             </div>
         </div>
     </div>
     <div class="slider-item" 
-         style="background-image: url('/Content/images/bg_2.jpg');">
+         style="background-image: url('../../Content/images/Slide2.jpg');">
         <div class="overlay"></div>
         <div class="container">
             <div class="row slider-text align-items-center">
                 <div class="col-md-7 col-sm-12 ftco-animate">
-                    <p>We're <strong><a href="#">Vertex</a></strong>, Construction and Development</p>
-                    <h1 class="mb-3">Constructing is our life business</h1>
+                    <p> O <strong><a href="#">SupplierRanking</a></strong>, tem como finalidade trazer o melhor do mercado para você </p>
+                    <h1 class="mb-3">Trazendo ótimos negócios para você!! </h1>
                 </div>
             </div>
         </div>
@@ -86,14 +86,15 @@
             <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
                 <div class="media block-6 services p-3 py-4 d-block text-center">
                     <div class="icon mb-3">
-                        <span class="flaticon-maintenance"></span>
+                        @*<span class="flaticon-maintenance"></span>*@
+                        <img src="~/Content/images/servicos.png" />
                     </div>
                     <div class="media-body">
                         <h3 class="heading">
-                            Construction Management
+                            Serviço rápido
                         </h3>
                         <p>
-                            Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.
+                            Se você busca serviço rápido e com ótima qualidade, você está no lugar certo.
                         </p>
                     </div>
                 </div>
@@ -101,14 +102,16 @@
             <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
                 <div class="media block-6 services p-3 py-4 d-block text-center">
                     <div class="icon mb-3">
-                        <span class="flaticon-construction"></span>
+                        @*<span class="flaticon-construction"></span>*@
+                        <img src="~/Content/images/search.png" />
                     </div>
                     <div class="media-body">
                         <h3 class="heading">
-                            Pre-Construction Services
+                           Filtrar
                         </h3>
                         <p>
-                            Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.
+                            Nosso site garante que com o sistema de filtro, você sempre estára 
+                            perto de encontrar os melhores materiais pelos melhores preços .
                         </p>
                     </div>
                 </div>
@@ -116,14 +119,15 @@
             <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
                 <div class="media block-6 services p-3 py-4 d-block text-center">
                     <div class="icon mb-3">
-                        <span class="flaticon-conveyor"></span>
+                        @*<span class="flaticon-conveyor"></span>*@
+                        <img src="~/Content/images/email.png" />
                     </div>
                     <div class="media-body">
                         <h3 class="heading">
-                            Construction Services
+                            Contato
                         </h3>
                         <p>
-                            Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.
+                            Contato rápido e eficiente entre compradores e fornecedores.
                         </p>
                     </div>
                 </div>
@@ -131,14 +135,17 @@
             <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
                 <div class="media block-6 services p-3 py-4 d-block text-center">
                     <div class="icon mb-3">
-                        <span class="flaticon-engineer"></span>
+                        @*<span class="flaticon-engineer"></span>*@
+                        <img src="~/Content/images/ranking.png" />
+
                     </div>
                     <div class="media-body">
                         <h3 class="heading">
-                            General Constructing
+                            Ranking
                         </h3>
                         <p>
-                            Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.
+                            Faça parte do time e esteja no topo da lista dos melhores fornecedores .
+                           
                         </p>
                     </div>
                 </div>
@@ -160,16 +167,17 @@
             <div class="col-md-5 d-flex align-self-stretch ftco-animate">
                 <div class="media block-6 services p-3 py-4 d-block text-center">
                     <div class="icon mb-3">
-                        <span class="flaticon-maintenance"></span>
+                        @*<span class="flaticon-maintenance"></span>*@
+                        <img src="~/Content/images/compradorIcon.png" />
                     </div>
                     <div class="media-body">
                         <h3 class="heading">
                             Comprador
                         </h3>
                         <ul >
-                            <li>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</li>
-                            <li>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</li>
-                            <li>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</li>
+                            <li>Adquira os produtos desejados para sua empresa.</li>
+                            <li>Filtre os melhores preços e qualidade.</li>
+                            <li>Entre em contato com o fornecedor com mais facilidade.</li>
                         </ul>
                     </div>
                 </div>
@@ -180,14 +188,15 @@
             <div class="col-md-5 d-flex align-self-stretch ftco-animate">
                 <div class="media block-6 services p-3 py-4 d-block text-center">
                     <div class="icon mb-3">
-                        <span class="flaticon-construction"></span>
+                        @*<span class="flaticon-construction"></span>*@
+                        <img src="~/Content/images/fornecedorIcon.png" />
                     </div>
                     <div class="media-body">
                         <h3 class="heading">
                             Fornecedor
                         </h3>
                         <p>
-                            Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.
+                             Divulgue seus produtos e matérias primas e tenha maior índice de vendas.
                         </p>
                     </div>
                 </div>
@@ -243,9 +252,11 @@
 <!-- FIM - Fornecedores -->
 
 <!-- INÍCIO - Experimente Agora -->
-<section class="ftco-section cover_1" 
-        style="background-image: url(/Content/images/bg_3.jpg);" 
-         data-stellar-background-ratio="0.5">
+<section class="ftco-section cover_1"
+         style="background-image: url(../../Content/images/ExperimenteAgora.jpg);">
+         
+
+        
         <div class="overlay"></div>
         <div class="container">
             <div class="row text-center justify-content-center">
@@ -254,14 +265,15 @@
                         Experimente Agora
                     </h2>
                     <p class="sub-heading mb-5">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi unde impedit, necessitatibus, soluta sit quam minima expedita atque corrupti reiciendis.
+                        Acesse já, para obter maior sucesso nas vendas de sua empresa, ou até mesmo se você 
+                        necessita de materiais ou matéria prima para sua pequena ou média empresa.
                     </p>
                     <p>
-                        <a class="btn btn-primary btn-lg" 
-                           data-toggle="modal" 
-                           data-target="#modalRequest" 
+                        <a class="btn btn-primary btn-lg"
+                           data-toggle="modal"
+                           data-target="#modalRequest"
                            href="#" >
-                            Request a Quote
+                            Cadastre-se, já
                         </a>
                     </p>
                 </div>
@@ -287,7 +299,8 @@
                     </div>
                     <h3 class="mb-3">Free</h3>
                     <p class="mb-4">
-                        Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+                        Com o plano Free, você poderá ter acesso às funcionalidades do sistema,
+                        sem ter que se preocupar em desembolsar qualquer quantia.
                     </p>
                     <p class="price mb-4 py-3">
                         <span class="mr-2 currency"> R$0,00 </span>
@@ -309,7 +322,9 @@
                     </div>
                     <h3 class="mb-3">Premium</h3>
                     <p class="mb-4">
-                        Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+                        Com nosso plano Premium, além de você ter acesso à todas as funcionalidades do sistema,
+                        você que está começando no mercado agora ou que já está há alguns anos, poderá ficar no
+                        topo da lista das melhores empresas fornecedoras de materiais
                     </p>
                     <p class="price mb-4 py-3">
                         <span class="mr-2 currency"> R$29,90 </span>
@@ -332,7 +347,7 @@
 <!-- FIM - Planos -->
 
 <!-- INÍCIO - MODAL -->
-<div class="modal fade" id="modalRequest" tabindex="-1" role="dialog" aria-labelledby="modalAppointmentLabel" aria-hidden="true">
+@*<div class="modal fade" id="modalRequest" tabindex="-1" role="dialog" aria-labelledby="modalAppointmentLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -376,5 +391,5 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
 <!-- INÍCIO - MODAL -->
