--- a/SupplierRanking/Views/Home/SobreNos.cshtml
+++ b/SupplierRanking/Views/Home/SobreNos.cshtml
@@ -4,7 +4,7 @@
 <!-- INÍCIO - Carossel -->
 <section class="home-slider owl-carousel">
     <div class="slider-item" 
-         style="background-image: url('/Content/images/bg_3.jpg');" 
+         style="background-image: url('../../Content/images/about.jpg');" 
          data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
@@ -25,7 +25,7 @@
     <div>
         <div class="section-2-blocks-wrapper row no-gutters">
             <div class="img col-sm-12 col-md-6" 
-                 style="background-image: url('/Content/images/image_4.jpg');" 
+                 style="background-image: url('../../Content/images/team.jpg" 
                  data-aos="fade-right">
                 <a class="button popup-vimeo"
                    href="https://vimeo.com/45830194"
@@ -41,9 +41,9 @@
                         <h2>Como surgiu?</h2>
                     </div>
                     
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                    <p>A ideia surgiu quando, um dos fundadores teve a brilhante ideia de facilitar a vida dos compradores de materiais e fornecedores do mesmo.</p>
 
-                    <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+                    <p>Um determinado dia ele se juntou a um grupo de programadores e desenvolveram a ideia desse sistema super eficiente !</p>
                 </div>
             </div>
         </div>
@@ -72,7 +72,7 @@
                             <h3 class="name">Laressa Assis</h3>
                             <span class="position">1</span>
                             <p>Front-End</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <p>Responsável por coordenar e desenvolver o Front-end.</p>
                             <p>
                                 <a href="#" class="p-2"><span class="icon-twitter"></span></a>
                                 <a href="#" class="p-2"><span class="icon-facebook"></span></a>
@@ -90,10 +90,10 @@
                              src="/Content/images/person_2.jpg" 
                              alt="Image Placeholder">
                         <div class="media-body p-3">
-                            <h3 class="name">Luiz Oliveira</h3>
+                            <h3 class="name">Luiz Gustavo</h3>
                             <span class="position">2</span>
                             <p>Front-End</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <p>Responsável por desenvolver Front-end.</p>
                             <p>
                                 <a href="#" class="p-2"><span class="icon-twitter"></span></a>
                                 <a href="#" class="p-2"><span class="icon-facebook"></span></a>
@@ -114,7 +114,7 @@
                             <h3 class="name">Marcelo Lemos</h3>
                             <span class="position">3</span>
                             <p>Back-End</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <p>Responsável por desenvolver o Back-end e auxilía na montagem do Banco de Dados.</p>
                             <p>
                                 <a href="#" class="p-2"><span class="icon-twitter"></span></a>
                                 <a href="#" class="p-2"><span class="icon-facebook"></span></a>
@@ -135,7 +135,7 @@
                             <h3 class="name">Valmir Junior</h3>
                             <span class="position">4</span>
                             <p>Back-End</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <p>Responsável pelo Back-end e Banco de Dados.</p>
                             <p>
                                 <a href="#" class="p-2"><span class="icon-twitter"></span></a>
                                 <a href="#" class="p-2"><span class="icon-facebook"></span></a>
