--- a/SupplierRanking/Views/Home/Contato.cshtml
+++ b/SupplierRanking/Views/Home/Contato.cshtml
@@ -4,7 +4,7 @@
 <!-- INÍCIO - Carossel -->
 <section class="home-slider owl-carousel">
     <div class="slider-item" 
-         style="background-image: url('/Content/images/bg_3.jpg');" 
+         style="background-image: url('../../Content/images/contato.jpg');" 
          data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
