--- a/SupplierRanking/Views/Home/Planos.cshtml
+++ b/SupplierRanking/Views/Home/Planos.cshtml
@@ -31,7 +31,8 @@
                     </div>
                     <h3 class="mb-3">Free</h3>
                     <p class="mb-4">
-                        Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+                        Com o plano Free, você poderá ter acesso às funcionalidades do sistema,
+                        sem ter que se preocupar em desembolsar qualquer quantia.
                     </p>
                     <p class="price mb-4 py-3">
                         <span class="mr-2 currency"> R$0,00 </span> 
@@ -54,7 +55,9 @@
                     </div>
                     <h3 class="mb-3">Premium</h3>
                     <p class="mb-4">
-                        Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+                        Com nosso plano Premium, além de você ter acesso à todas as funcionalidades do sistema,
+                        você que está começando no mercado agora ou que já está há alguns anos, poderá ficar no
+                        topo da lista das melhores empresas fornecedoras de materiais
                     </p>
                     <p class="price mb-4 py-3">
                         <span class="mr-2 currency"> R$29,90 </span> 
