--- a/SupplierRanking/Views/Avaliacao/RankingGeral.cshtml
+++ b/SupplierRanking/Views/Avaliacao/RankingGeral.cshtml
@@ -58,7 +58,7 @@
         @if (item.Imagem64 == "")
         {
             <td>
-                <img src="~/Content/images/fotopadrao.jpg" height="100" width="100" />
+                <img src="~/Content/images/iconecor.png" height="100" width="100" />
             </td>
         }
         else
