--- a/SupplierRanking/Views/Shared/_LayoutLogin.cshtml
+++ b/SupplierRanking/Views/Shared/_LayoutLogin.cshtml
@@ -47,6 +47,6 @@
 
         <!-- INÍCIO - Nossos JS -->
         <script src="~/Content/js/login.js"></script>
-        <script src="~/Content/js/RestaurarSenha.js"></script>
+        @*<script src="~/Content/js/RestaurarSenha.js"></script>*@
     </body>
 </html>
