--- a/SupplierRanking/Views/Home/Index.cshtml
+++ b/SupplierRanking/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
             <div class="row slider-text align-items-center">
                 <div class="col-md-7 col-sm-12 ftco-animate">
                     <p> O <strong><a href="#">SupplierRanking</a></strong>, tem como finalidade trazer o melhor do mercado para você </p>
-                    <h1 class="mb-3">Trazendo ótimos negócios para você!! </h1>
+                    <h1 class="mb-3">Trazendo ótimos negócios para você. </h1>
                 </div>
             </div>
         </div>
