La - Termino do Login e Cadastro Pessoa Fisica

--- a/SupplierRanking/Views/Login/Login.cshtml
+++ b/SupplierRanking/Views/Login/Login.cshtml
@@ -113,7 +113,7 @@
         <input class="input" type="password" name="senha" placeholder="Senha">
     </div>
 
-    <input id="inputHidden" type="text" name="inputHidden" >
+    <input id="inputHidden" type="text" name="inputHidden" hidden>
 
 </form>
 
