--- a/SupplierRanking/Views/Comprador/CadastroPessoaFisica.cshtml
+++ b/SupplierRanking/Views/Comprador/CadastroPessoaFisica.cshtml
@@ -74,9 +74,6 @@
         </div>
     </div>
 
-    @*<p>@ViewBag.Message</p>*@
-
-
     <form class="col-12 cadastro-form d-flex justify-content-end mt-4 pt-4 pr-2 pl-0"
           method="post" action="../Comprador/CadastroPessoaFisica">
 
@@ -197,9 +194,8 @@
 
 <div class="row col-12 cadastro-options align-items-center pl-5 pr-5">
 
-    <span class="col-8 error-msg alert-danger d-flex justify-content-center p-2 mt-3 mb-4 hide"
-          style="margin: 0 auto;">
-        Preencha o(s) campo(s) corretamente! @ViewBag.Message
+    <span class="@ViewBag.cssClass">
+        @ViewBag.Message
     </span>
 
     <div class="col-12 d-flex form-first-part p-0">
