Val - CadastrarInteresses MODEL

--- a/SupplierRanking/Views/Comprador/NovaSenha.cshtml
+++ b/SupplierRanking/Views/Comprador/NovaSenha.cshtml
@@ -14,7 +14,7 @@
             <p>@ViewBag.Message</p>
             <!--- Campos do Comprador Fisico -->
             <div>
-                <input type="hidden" value="@Model.Codigo" name="codigo" readonly="readonly" style="background-color: gray">
+                <input type="hidden" value="1" name="codigo" readonly="readonly" style="background-color: gray">
                 <br /> <br />
                 <input type="text" name="senhaNova" placeholder="Nova senha">
                 <input type="text" name="confirmaSenhaNova" placeholder="Confirma nova senha">
