--- a/SupplierRanking/Views/Fornecedor/RestaurarSenha.cshtml
+++ b/SupplierRanking/Views/Fornecedor/RestaurarSenha.cshtml
@@ -5,8 +5,8 @@
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
-<div  class="container-restaura-senha">
-    <div  class="wrap-restaurar-senha" style="background-color: white;">
+@*<div  class="container-login100">
+    <div  class="wrap-login100" style="background-color: white;">
         <h2 style="margin-left: 264px;">Restaurar Senha</h2>
        
         <br /> 
@@ -74,4 +74,4 @@
            
         </form>
     </div>
-</div>
+</div>*@
