--- a/SupplierRanking/Views/Fornecedor/RestaurarSenha.cshtml
+++ b/SupplierRanking/Views/Fornecedor/RestaurarSenha.cshtml
@@ -12,7 +12,7 @@
         <br /> 
         <br />
 
-        <form action="../Fornecedor/RestaurarSenha" method="post" class="login100-form validate-form" enctype="multipart/form-data" style="margin-left: 143px;">
+        <form action="../Fornecedor/RestaurarSenha" method="post" class="login100-form restaura-senha-form validate-form" enctype="multipart/form-data" style="margin-left: 143px;">
 
             <!--- Campos digitar nova senha -->
 
