--- a/SupplierRanking/Content/css/cadastro.css
+++ b/SupplierRanking/Content/css/cadastro.css
@@ -13,17 +13,8 @@
     height: 81%;
 }
 
-.form-first-part {
-    position: relative;
-    top: -94%;
-}
-
 .input {
     padding: 0 20px;
-}
-
-.focus-input {
-    width: 91.5%;
 }
 
 .states {
@@ -36,43 +27,6 @@
     font: 15px inherit 500;
     color: #666666;
     line-height: 1.5;
-}
-
-.form-second-part {
-    position: absolute;
-    top: 13.9%;
-    left: 0;
-}
-
-.form-second-part .wrap-input {
-    padding: 0 1.1em;
-}
-
-.form-third-part .row:last-of-type {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-}
-
-.form-third-part .checkbox-container {
-    position: relative;
-    cursor: pointer;
-}
-
-.form-third-part .checkbox-container label {
-    color: #000;
-    text-transform: capitalize;
-    padding-left: 35px;
-}
-
-/* Hide the browser's default checkbox */
-.form-third-part .checkbox-container input[type="checkbox"],
-.form-third-part .checkbox-container input[type="radio"] {
-    position: absolute;
-    width: 0;
-    height: 0;
-    opacity: 0;
-    cursor: pointer;
 }
 
 /* Create a custom checkbox */
@@ -107,12 +61,106 @@
     top: 2px;
 }
 
-.form-third-part .other-option .checkbox {
-    top: 0;
-}
-
 .cadastro-options {
     position: absolute;
     bottom: 5vh;
     left: 0;
+}
+
+
+/********************* PESSOA FÍSICA *********************/
+
+.form-pf-first-part {
+    position: relative;
+    top: -94%;
+}
+
+.form-pf-second-part {
+    position: absolute;
+    top: 13.9%;
+    left: 0;
+}
+
+.form-pf-second-part .wrap-input {
+    padding: 0 1.1em;
+}
+
+.form-pf-third-part .row:last-of-type {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.form-pf-third-part .checkbox-container {
+    position: relative;
+    cursor: pointer;
+}
+
+.form-pf-third-part .checkbox-container label {
+    color: #000;
+    text-transform: capitalize;
+    padding-left: 35px;
+}
+
+/* Hide the browser's default checkbox */
+.form-pf-third-part .checkbox-container input[type="checkbox"],
+.form-pf-third-part .checkbox-container input[type="radio"] {
+    position: absolute;
+    width: 0;
+    height: 0;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.form-pf-third-part .other-option .checkbox {
+    top: 0;
+}
+
+
+/********************* PESSOA JURÍDICA *********************/
+
+.form-pj-first-part {
+    position: relative;
+    top: -101%;
+}
+
+.form-pj-second-part {
+    position: absolute;
+    top: 8%;
+    left: 0;
+}
+
+.form-pj-second-part .wrap-input {
+    padding: 0 1.1em;
+}
+
+.form-pj-third-part .row:last-of-type {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.form-pj-third-part .checkbox-container {
+    position: relative;
+    cursor: pointer;
+}
+
+.form-pj-third-part .checkbox-container label {
+    color: #000;
+    text-transform: capitalize;
+    padding-left: 35px;
+}
+
+/* Hide the browser's default checkbox */
+.form-pj-third-part .checkbox-container input[type="checkbox"],
+.form-pj-third-part .checkbox-container input[type="radio"] {
+    position: absolute;
+    width: 0;
+    height: 0;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.form-pj-third-part .other-option .checkbox {
+    top: 0;
 }
