--- a/SupplierRanking/Views/Comprador/NovaSenha.cshtml
+++ b/SupplierRanking/Views/Comprador/NovaSenha.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SupplierRanking.Models.Comprador
 @{
-    ViewBag.Title = "RestaurarSenha";
+    ViewBag.Title = "NovaSenha";
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
