--- a/SupplierRanking/Views/Fornecedor/NovaSenha.cshtml
+++ b/SupplierRanking/Views/Fornecedor/NovaSenha.cshtml
@@ -1,7 +1,7 @@
 ﻿
 
 @{
-    ViewBag.Title = "RestaurarSenha";
+    ViewBag.Title = "NovaSenha";
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
