--- a/SupplierRanking/Views/Comprador/CadastroPessoaFisica.cshtml
+++ b/SupplierRanking/Views/Comprador/CadastroPessoaFisica.cshtml
@@ -30,12 +30,12 @@
 
             <!--- Fornecedor --->
             <div class="col-5 js-tilt" data-tilt>
-                <a class="d-flex justify-content-center" href="/Fornecedor/CadastroFornecedor">
-                    <div id="btnFornecedor" class="col-9 switch-wrapper p-3">
+               
+                    <button id="btnFornecedor" class="col-9 switch-wrapper p-3">
                         <img src="/Content/images/fornecedor.png" />
                         <h6 class="switch-person-title p-2">Fornecedor</h6>
-                    </div>
-                </a>
+                    </button>
+                
             </div>
         </div>
 
