Val - Exclui campos de endereco do Comprador - Testei os

--- a/SupplierRanking/Views/Comprador/UpdateSenha.cshtml
+++ b/SupplierRanking/Views/Comprador/UpdateSenha.cshtml
@@ -16,7 +16,7 @@
             <div>
                 <input type="hidden" value="" name="codigo" readonly="readonly" style="background-color: gray">
                 <br /> <br />
-                <input type="text" name="senhaAntiga" placeholder="Senha antiga">
+                <input type="text" name="senhaAtual" placeholder="Senha antiga">
                 <input type="text" name="senhaNova" placeholder="Senha nova">
                 <input type="text" name="confirmaSenhaNova" placeholder="Confirma senha nova">
                 <br /> <br />
