--- a/SupplierRanking/Views/Shared/_LayoutCadastro.cshtml
+++ b/SupplierRanking/Views/Shared/_LayoutCadastro.cshtml
@@ -47,9 +47,10 @@
         <!-- FIM - Script's de configuracao -->
 
         <!-- INÍCIO - Nossos JS -->
-        <script src="~/Content/js/cadastro-geral.js"></script>
+        <script src="~/Content/js/cadastro.js"></script>
         <script src="~/Content/js/cadastro-pessoa-fisica.js"></script>
         <script src="~/Content/js/cadastro-pessoa-juridica.js"></script>
+        <script src="~/Content/js/cadastro-fornecedor.js"></script>
         <script src="~/Content/js/update.js"></script>
     </body>
 </html>
