--- a/SupplierRanking/Views/Comprador/EsqueceuSuaSenha.cshtml
+++ b/SupplierRanking/Views/Comprador/EsqueceuSuaSenha.cshtml
@@ -15,24 +15,30 @@
     <div class="row col-12 align-items-center mt-4">
         <!--- Comprador --->
         <div class="col-5 js-tilt" data-tilt>
-            <button id="btnComprador" class="col-9 switch-wrapper p-3">
-                <img src="/Content/images/comprador.png" />
-                <h5 class="switch-person-title p-2">Comprador</h5>
-            </button>
-        </div>
+            <a class="d-flex justify-content-center" >
+                <div id="btnComprador" class="col-9 switch-wrapper p-3">
+                    <img src="/Content/images/comprador.png" />
+                    <h5 class="switch-person-title p-2">Comprador</h5>
+                </div>
+                </a>
+</div>
 
         <!--- Switch --->
         <label class="switch m-3">
-            <input id="switchFornecedor" type="checkbox">
-            <span class="slider slider-fornecedor round unchecked"></span>
-        </label>
+          
+                <input id="switchFornecedor" type="checkbox" disabled>
+                <span class="slider slider-fornecedor round unchecked"></span>
+             
+</label>
 
         <!--- Fornecedor --->
         <div class="col-5 js-tilt" data-tilt>
-            <button id="btnFornecedor" class="col-9 switch-wrapper p-3">
+            <a  href="../Fornecedor/EsqueceuSuaSenha">
+            <div id="btnFornecedor" class="col-9 switch-wrapper p-3">
                 <img src="/Content/images/fornecedor.png" />
                 <h5 class="switch-person-title p-2">Fornecedor</h5>
-            </button>
+            </div>
+            </a>
         </div>
     </div>
 </div>
