Val - Salvando Lista de Interesses

--- a/SupplierRanking/Views/Avaliacao/CadastrarAvaliacao.cshtml
+++ b/SupplierRanking/Views/Avaliacao/CadastrarAvaliacao.cshtml
@@ -8,7 +8,7 @@
 
     <div class="wrap-login100" style="background-color: white;">
 
-        <h2>UpdatePessoaFisica</h2>
+        <h2>Cadastrar Avaliação</h2>
 
         <form action="../Avaliacao/CadastrarAvaliacao" method="post" class="login100-form validate-form">
             <p>@ViewBag.Message</p>
