--- a/SupplierRanking/Views/Fornecedor/EsqueceuSenhaFornecedor.cshtml
+++ b/SupplierRanking/Views/Fornecedor/EsqueceuSenhaFornecedor.cshtml
@@ -120,7 +120,7 @@
                 <p style="margin-left: 50%;font-size: 20px;font-family: inherit;color: #DAA520;">Ou</p>
             </div>
 
-            <!--- Codigo Funcionario --->
+            <!--- Codigo Funcionario ---->
             <div id="inputFuncionario" class="col-10 wrap-input pl-2 mt-3">
                 <input class="input" type="text" name="codigoFuncionario" placeholder="Código do Funcionário">
                 <span class="focus-input"></span>
