marcelo - correção cadastro funcionario

--- a/SupplierRanking/Views/Fornecedor/NovaSenha.cshtml
+++ b/SupplierRanking/Views/Fornecedor/NovaSenha.cshtml
@@ -5,14 +5,14 @@
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
-@*<div  class="container-login100">
+<div  class="container-login100">
     <div  class="wrap-login100" style="background-color: white;">
         <h2 style="margin-left: 264px;">Restaurar Senha</h2>
        
         <br /> 
         <br />
 
-        <form action="../Fornecedor/RestaurarSenha" method="post" class="login100-form restaura-senha-form validate-form" enctype="multipart/form-data" style="margin-left: 143px;">
+        <form action="../Fornecedor/NovaSenha" method="post" class="login100-form restaura-senha-form validate-form" enctype="multipart/form-data" style="margin-left: 143px;">
 
             <!--- Campos digitar nova senha -->
 
@@ -74,4 +74,4 @@
            
         </form>
     </div>
-</div>*@
+</div>
