--- a/SupplierRanking/Views/Fornecedor/EsqueceuSuaSenha.cshtml
+++ b/SupplierRanking/Views/Fornecedor/EsqueceuSuaSenha.cshtml
@@ -46,15 +46,15 @@
             <label class="switch m-3">
                 <a href="../Comprador/EsqueceuSuaSenha">
                     
-                    <input id="switchFornecedor" type="checkbox" disabled/>
-                    <span class="slider slider-fornecedor round unchecked"></span>
+                    <input id="switchFornecedor" type="checkbox" checked />
+                    <span class="slider slider-fornecedor round "></span>
                 </a>
             </label>
 
             <!--- Fornecedor --->
             <div class="col-5 js-tilt" data-tilt>
-                <a class="d-flex justify-content-center">
-                <div id="btnFornecedor" class="col-9 switch-wrapper  p-3">
+                <a class="d-flex justify-content-center" >
+                <div id="btnFornecedor" class="col-9 switch-wrapper active-switch  p-3">
                     <img src="/Content/images/fornecedor.png" />
                     <h5 class="switch-person-title p-2">Fornecedor</h5>
                 </div>
@@ -65,7 +65,7 @@
 
     <!-- Pessoa Fisica & Pessoa Juridica --->
     <div id="wrapperFisicaJuridica"
-         class="col-12 text-center justify-content-center mt-4 hide">
+         class="col-12 text-center justify-content-center mt-4 hide ">
         Informe o seu tipo de perfil:
 
         <div class="row align-items-center mt-4 pr-5 pb-5 pl-5">
@@ -95,7 +95,7 @@
 
    
 
-    <!--- Formulario de Login --->
+    <!--- Formulario de Enviar email--->
     <form class="row restaura-senha-form justify-content-center p-5 hide"
           method="post" action="../Fornecedor/EsqueceuSuaSenha">
 
@@ -113,7 +113,7 @@
 
 
         <!--- CNPJ --->
-        <div id="inputCnpj" class="col-10 wrap-input pl-2">
+        <div id="inputCnpj" class="col-10 wrap-input pl-2 ">
             <input class="input" type="text" maxlength="19" name="cnpj" placeholder="CNPJ" data-mask="00.000.000/0000-00" data-mask-sectionFocus="true">
             <span class="focus-input"></span>
             <span class="symbol-input">
